--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: 'MyriadPro';
-  background: linear-gradient(#7857b0, #5857b0, #324a99);
+  background: linear-gradient(#7045FF, #5857b0, #6173F4);
 }
 
 h1, h2, h3, h4, h5, h6 {
